Added vocabulary fragment, authorization code, loading view, themes support

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,8 @@
         android:name="com.example.ipolitician.nav.problems.ProblemsFragment"
         android:label="Problems"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/nav_vocab"
+        android:name="com.example.ipolitician.nav.vocab.VocabularyFragment"
+        android:label="VocabularyFragment" />
 </navigation>
