--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,30 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="LightMode" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="backgroundClr">@color/lightBackground</item>
+        <item name="componentClr">@color/lightComponentColor</item>
+        <item name="textClr">@color/lightTextColor</item>
+
     </style>
 
-    <style name="AppTheme.NoActionBar">
+    <style name="DarkMode" parent="LightMode">
+        <!-- Customize your theme here. -->
+        <item name="backgroundClr">@color/darkBackground</item>
+        <item name="componentClr">@color/darkComponentColor</item>
+        <item name="textClr">@color/darkTextColor</item>
+    </style>
+
+    <style name="LightMode.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="DarkMode.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
