add Dark/Light Mode switch

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
@@ -34,4 +35,15 @@
             </group>
         </menu>
     </item>
+
+    <item android:title="Options">
+        <menu>
+            <item android:id="@+id/nav_switch"
+                app:actionLayout="@layout/switch_menu"
+                android:icon="@drawable/contrast"
+                android:title="Theme"/>
+        </menu>
+    </item>
+
+
 </menu>
