Election Page enabled - ElectionRecyclerViewAdapter/Holder added

--- a/app/src/main/res/layout/election_fragment.xml
+++ b/app/src/main/res/layout/election_fragment.xml
@@ -5,9 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".nav.election.ElectionFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/elections_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
