Added theme, loading, support on almost all fragments, improved graphics and changed charts to new ones

--- a/app/src/main/res/layout/election_holder.xml
+++ b/app/src/main/res/layout/election_holder.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp">
 
     <TextView
         android:id="@+id/election_title"
@@ -12,9 +13,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:background="#000000"
+        android:background="@drawable/rounded_background"
+        android:padding="4dp"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
+        android:textColor="?attr/textClr"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,15 +33,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/election_title" />
-
-    <TextView
-        android:id="@+id/breakln"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="8dp"
-        android:background="#090909"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/candidates" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
