--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/nav_public">
+    app:startDestination="@id/nav_login">
 
     <fragment
         android:id="@+id/nav_public"
@@ -30,5 +30,9 @@
         android:id="@+id/nav_election"
         android:name="com.example.ipolitician.nav.election.ElectionFragment"
         android:label="Election"
-        tools:layout="@layout/election_fragment" />
+        tools:layout="@layout/fragment_election" />
+    <fragment
+        android:id="@+id/nav_login"
+        android:name="com.example.ipolitician.nav.auth.LoginFragment"
+        android:label="LoginFragment" />
 </navigation>
