vote change working!!

--- a/app/src/main/res/layout/fragment_public.xml
+++ b/app/src/main/res/layout/fragment_public.xml
@@ -88,7 +88,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="16dp"
-                android:background="@drawable/corner_radius"
+                android:background="@drawable/button_background_shape"
                 android:text="FILTER"
                 android:textSize="18sp" />
 
