--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,4 +3,6 @@
     <attr name="backgroundClr" format="reference" />
     <attr name="componentClr" format="reference" />
     <attr name="textClr" format="reference" />
+    <attr name="buttonColorStart" format="reference" />
+    <attr name="buttonColorEnd" format="reference" />
 </resources>
