some UI and DB upgrade

--- a/app/src/main/res/layout/fragment_public.xml
+++ b/app/src/main/res/layout/fragment_public.xml
@@ -47,47 +47,62 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginBottom="12dp"
                 android:text="Age"
                 android:textColor="?attr/textClr"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <Spinner
-                android:id="@+id/spinner4"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginBottom="12dp"
-                android:background="@drawable/rounded_background" />
+                app:cardCornerRadius="12dp">
+
+                <Spinner
+                    android:id="@+id/spinner4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:popupBackground="@drawable/rounded_background" />
+
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginBottom="12dp"
                 android:text="Gender"
                 android:textColor="?attr/textClr"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <Spinner
-                android:id="@+id/spinner5"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:background="@drawable/rounded_background" />
+                app:cardCornerRadius="12dp">
+
+            <Spinner
+                android:id="@+id/spinner5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:popupBackground="@drawable/rounded_background"/>
+            </androidx.cardview.widget.CardView>
 
             <Button
                 android:id="@+id/filterBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="12dp"
+                android:layout_marginEnd="10dp"
                 android:background="@drawable/button_background_shape"
                 android:text="FILTER"
                 android:textSize="18sp" />
