--- a/app/src/main/res/layout/fragment_problem_post.xml
+++ b/app/src/main/res/layout/fragment_problem_post.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FAE9E9">
+    android:background="@drawable/rounded_background"
+    android:backgroundTint="?attr/componentClr">
 
     <EditText
         android:id="@+id/problem_post"
@@ -16,6 +17,7 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
+        android:textColor="?attr/textClr"
         app:layout_constraintBottom_toTopOf="@+id/post_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -23,10 +25,11 @@
     <Button
         android:id="@+id/post_button"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/button_background_shape"
         android:text="POST"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
