--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00BFA5">
+    android:background="#00BFA5"
+    android:animateLayoutChanges="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
@@ -28,7 +29,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/loginBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -37,7 +38,7 @@
                 android:text="Log in" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/signUpBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -53,6 +54,7 @@
             android:layout_marginTop="16dp"
             android:paddingLeft="8dp"
             android:text="Personal Number"
+            android:textSize="15sp"
             android:textColor="?attr/textClr"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             tools:layout_editor_absoluteX="0dp" />
@@ -62,12 +64,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_background"
             android:backgroundTint="?attr/backgroundClr"
             android:ems="10"
-            android:hint="Example: 01001234567"
+            android:hint="01001234567"
             android:inputType="textPersonName"
             android:padding="8dp"
             android:textSize="16sp"
@@ -82,27 +84,49 @@
             android:layout_marginTop="8dp"
             android:paddingStart="8dp"
             android:text="Password"
+            android:textSize="15sp"
             android:textColor="?attr/textClr"
             app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
             tools:layout_editor_absoluteX="-16dp" />
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/editTextTextPersonName2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
-            android:background="@drawable/rounded_background"
-            android:backgroundTint="?attr/backgroundClr"
-            android:ems="10"
-            android:hint="a-z,A-Z,1-9"
-            android:inputType="textPassword"
-            android:padding="8dp"
-            android:textSize="16sp"
+            app:passwordToggleEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView17" />
+            app:layout_constraintTop_toBottomOf="@+id/textView17" >
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:hint="a-z,A-Z,1-9"
+                android:padding="8dp"
+                android:inputType="textPassword"
+                android:background="@drawable/rounded_background"
+                android:backgroundTint="?attr/backgroundClr"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+<!--        <EditText-->
+<!--            android:id="@+id/editTextTextPersonName2"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_marginTop="4dp"-->
+<!--            android:layout_marginEnd="8dp"-->
+<!--            android:background="@drawable/rounded_background"-->
+<!--            android:backgroundTint="?attr/backgroundClr"-->
+<!--            android:ems="10"-->
+<!--            android:hint="a-z,A-Z,1-9"-->
+<!--            android:inputType="textPassword"-->
+<!--            android:padding="8dp"-->
+<!--            android:textSize="16sp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/textView17" />-->
 
 
         <TextView
@@ -112,17 +136,20 @@
             android:layout_marginTop="8dp"
             android:paddingStart="8dp"
             android:text="Phone Number"
+            android:textSize="15sp"
             android:textColor="?attr/textClr"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
 
+
+        
         <EditText
             android:id="@+id/editTextPhone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_background"
             android:backgroundTint="?attr/backgroundClr"
@@ -142,6 +169,7 @@
             android:layout_marginTop="8dp"
             android:paddingStart="8dp"
             android:text="Enter Code"
+            android:textSize="15sp"
             android:textColor="?attr/textClr"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -152,7 +180,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_background"
             android:backgroundTint="?attr/backgroundClr"
