--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,4 +35,9 @@
         android:id="@+id/nav_login"
         android:name="com.example.ipolitician.nav.auth.LoginFragment"
         android:label="LoginFragment" />
+    <fragment
+        android:id="@+id/nav_profile"
+        android:name="com.example.ipolitician.nav.profile.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
